updated site images & fun-stuff-to-dos

--- a/main.html
+++ b/main.html
@@ -85,11 +85,10 @@
         <div class="infobox">
             <ul>
                 <li>The Walled Garden has a lot of grass, and Pittsburgh in July can be rainy, so those-in-heels may want to take notice.</li>
-                <li>The Union Project does not have air conditioning and Pittsburgh in July can get hot, so feel free to bring a change of clothes if you'd feel more comfortable.</li>
-                <li>If it's sunny or there's light rain, we'll keep the ceremony outisde. If it's heavy rain, we will head to the Union Project for the ceremony and stay for the reception.</li>
+                <li>If it's sunny or there's light rain, we'll keep the ceremony outside. If it's heavy rain, we will head to the Union Project for the ceremony and stay for the reception.</li>
                 <li>To get between the ceremony and reception, we're hoping Uber and locals who are willing to share their seats will be enough. The two spots are about 2 miles apart.</li>
+                <li>The ceremony and reception are definitely kid-friendly.</li>
                 <li>We will have vegetarian and gluten-free food options.</li>
-                <li>There will be an open bar.</li>
             </ul>
         </div>
     </div>
@@ -104,31 +103,99 @@
             <h3>By Car</h3>
             Well, we're not sure how helpful we can be here, but if you do drive, make sure you head through the Fort Pitt Tunnel. It's the <a href="https://youtu.be/Ci_rwQoRaxk?t=52s" target="_blank">best intro</a> to the city.
             <h3>Staying in PGH</h3>
-            We've reserved a block of rooms at <a href="" target="_blank">Such &amp; Such Hotel</a>, right around the corner from The Union Project. Ace Hotel? Hotel Indigo? SpringHill Suites?
+            We've reserved a block of rooms at <a href="" target="_blank">Such &amp; Such Hotel</a>, right around the corner from The Union Project. Ace Hotel? Hotel Indigo? SpringHill Suites? Airbnb is always a good option, too.
         </div>
     </div>
 
     <div id="{{sectionIds[2]}}" class="wedding-heading container"> <!-- Burgh -->
         <h1>{{sections[2]}}</h1>
         <div class="infobox">
-            Here's some of our favorite things to do in the city.
+            Here's some of our favorite things to do in the city. Pittsburgh has some excellent food trucks, and they often team up with the breweries listed below.
             <h3>Foods</h3>
             <ul>
-                <li>D's Six Pack and Dogz</li>
-                <li>Nikki's Thai Kitchen</li>
-                <li>Pamela's Dinner</li>
+                <li>
+                    <a href="http://www.ds6pax.com/">D's Six Pack and Dogz</a>
+                    <small> hot dogs and a good selection of beer</small>
+                </li>
+                <li>
+                    <a href="https://franktuary.com/">Frankuary</a>
+                    <small>More hot dogs &amp; sausages, and tasty cocktails</small>
+                </li>
+                <li>
+                    <a href="http://noodleheadpgh.com/">Noodlehead</a>
+                    <small>best thai street food in Pittsburgh</small>
+                </li>
+                <li>
+                    <a href="http://www.nickysthaikitchen.com/">Nicky's Thai Kitchen</a>
+                    <small>delicious everything-else-thai</small>
+                </li>
+                <li>
+                    <a href="https://www.yelp.com/biz/udipi-cafe-monroeville-2">Udipi Cafe</a>
+                    <small>best indian food in pittsburgh, location is kind of a dive and out of the way but the food is <i>so good</i></small>
+                </li>
+                <li>
+                    <a href="http://www.bakersfieldtacos.com/">Bakersfield</a>
+                    <small>real good tacos</small>
+                </li>
+                <li>
+                    <a href="http://www.pamelasdiner.com/">Pamela's Diner</a>  
+                    <small>greesy spoon breakfast, particularly excellent pancakes and potatoes</small>
+                </li>
+                <li>
+                    <a href="https://twitter.com/pghtacotruck">PGH Taco Truck</a> 
+                    <small>yummy tacos, sometimes found at Brew Gentlemen</small>
+                </li>
+                <li>
+                    <a href="https://twitter.com/macandgoldtruck">Mac &amp; Gold Truck</a>
+                    <small>gourmet mac 'n cheese, sometimes found at Grist House</small>
+                </li>
             </ul>
             <h3>Drinks</h3>
+            <p><small>(Fun Fact: most pubs and breweries in Pittsburgh are super kid-friendly.)</small></p>
             <ul>
-                <li>Yummy drinks</li>
+                <li>
+                    <a href="http://www.independentpgh.com/">Independent Brewery</a>
+                    <small>our local spot; good selection of local and western PA beer</small>
+                </li>
+                <li>
+                    <a href="http://www.brewgentlemen.com/">Brew Gentlemen</a>
+                    <small>started by a few CMU alumni; tasty, smooth beverages</small>
+                </li>
+                <li>
+                    <a href="http://gristhouse.com/">Grist House</a>
+                    <small>great outdoor porch atmosphere; good booze, too</small>
+                </li>
+                <li>
+                    <a href="http://maggiesfarmrum.com/">Maggie's Farm Rum Distillery</a>
+                    <small>really awesome cocktails in a cozy spot</small>
+                </li>
             </ul>
             <h3>Places</h3>
             <ul>
-                <li>Natural History Museum</li>
-                <li>The Warhol</li>
-                <li>Aviary</li>
-                <li>Mattress Factory</li>
-                <li>Frick Park</li>
+                <li>
+                    <a href="http://www.carnegiemnh.org/">Carnegie Museum of Natural History</a>
+                    <small>lots of dinosaurs</small>
+                </li>
+                <li>
+                    <a href="http://www.warhol.org/">The Warhol</a>
+                    <small>a chronological look through Andy Warhol's life</small>
+                </li>
+                <li>
+                    <a href="https://pittsburghkids.org/">The Children's Museum</a>
+                    <small>fantastic, thoughtful museum for kids (and adults!)</small>
+                </li>
+                <li>
+                    <a href="https://www.aviary.org/">The National Aviary</a>
+                    <small>there's a sloth. and a baby sloth! (also penguins and eagles and other awesome birds)</small>
+                </li>
+                <li>
+                    <a href="https://www.mattress.org/">The Mattress Factory</a>
+                    <small>contemporary art museum with room-sized exhibits. it's a little weird</small>
+                </li>
+                <li>
+                    <a href="http://www.pittsburghparks.org/frick-park?gclid=CJmR3Obyg9ACFYwDhgodOJAB-Q">Frick Park</a>
+                    <small>good hiking and bike trails and a new environmental center that's super cool</small>
+                </li>
             </ul>
         </div>
     </div>
