added a bower.json file, updated index.html to import only https files

--- a/index.html
+++ b/index.html
@@ -8,24 +8,18 @@
         <!-- https://designshack.net/articles/css/10-great-google-font-combinations-you-can-copy/ -->
         <!-- http://fontpair.co/ -->
         <!-- https://fonts.google.com/ -->
-        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+<!--
+        <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 
-        <link href='http://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Gudea' rel='stylesheet' type='text/css'>
-
-        <link href='http://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-        <!--
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-<script src="/bower_components/angular-masonry/angular-masonry.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Gudea' rel='stylesheet' type='text/css'>
 -->
+
+        <link href='https://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
         <script src="/bower_components/jquery/dist/jquery.js"></script>
         <script src="/bower_components/jquery-bridget/jquery-bridget.js"></script>
