--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link href='https://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
         <script src="/bower_components/jquery/dist/jquery.js"></script>
         <script src="/bower_components/jquery-bridget/jquery-bridget.js"></script>
