made food descriptions lower case

--- a/main.html
+++ b/main.html
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                     <a href="https://franktuary.com/">Frankuary</a>
-                    <small>More hot dogs &amp; sausages, and tasty cocktails</small>
+                    <small>more hot dogs &amp; sausages, and tasty cocktails</small>
                 </li>
                 <li>
                     <a href="http://noodleheadpgh.com/">Noodlehead</a>
