fixed up before sending out save-the-dates

--- a/main.html
+++ b/main.html
@@ -103,7 +103,21 @@
             <h3>By Car</h3>
             Well, we're not sure how helpful we can be here, but if you do drive, make sure you head through the Fort Pitt Tunnel. It's the <a href="https://youtu.be/Ci_rwQoRaxk?t=52s" target="_blank">best intro</a> to the city.
             <h3>Staying in PGH</h3>
-            We've reserved a block of rooms at <a href="" target="_blank">Such &amp; Such Hotel</a>, right around the corner from The Union Project. Ace Hotel? Hotel Indigo? SpringHill Suites? Airbnb is always a good option, too.
+            There are a few good hotel options in the area, but there are definitely other options if you're willing to drive a little. Let us know if you're having any trouble finding a place to stay and we'd be happy to help!
+            <ul>
+                <li>
+                    <a href="http://www.marriott.com/hotels/travel/pitel-springhill-suites-pittsburgh-bakery-square/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2">SpringHill Suites</a> is super close the wedding and a short drive to the reception. They also have good deals for longer stays.
+                </li>
+                <li>
+                    <a href="https://www.acehotel.com/pittsburgh">Ace Hotel</a> is close to the reception but is a little pricey and may not be great for families (they seem to mostly have rooms that fit "up to two adults").
+                </li>
+                <li>
+                    <a href="https://www.ihg.com/hotelindigo/hotels/us/en/pittsburgh/pithb/hoteldetail">Hotel Indigo</a> is also pretty close to the reception and may be better for families.
+                </li>
+                <li>
+                    <a href="https://www.airbnb.com/s/Pittsburgh--PA">Airbnb</a> is a nice alternative if you're looking for a little more flexibility in price and location.
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -163,7 +177,7 @@
                 </li>
                 <li>
                     <a href="http://gristhouse.com/">Grist House</a>
-                    <small>great outdoor porch atmosphere; good booze, too</small>
+                    <small>great outdoor porch atmosphere with dogs; good booze, too</small>
                 </li>
                 <li>
                     <a href="http://maggiesfarmrum.com/">Maggie's Farm Rum Distillery</a>
@@ -199,16 +213,22 @@
             </ul>
         </div>
     </div>
-    <div id="{{sectionIds[3]}}" class="wedding-heading container"> <!-- Registry -->
+    <!-- Registry -->
+<!--
+    <div id="{{sectionIds[3]}}" class="wedding-heading container"> 
         <h1>{{sections[3]}}</h1>
         <div class="infobox">
             We're registered on Amazon. We'd also be plenty happy with cash. But really, we just want you to be there (aww).
         </div>
     </div>
-    <div id="{{sectionIds[4]}}" class="wedding-heading container"> <!-- RSVP -->
+-->
+    <!-- RSVP -->
+<!--
+    <div id="{{sectionIds[4]}}" class="wedding-heading container">
         <h1>{{sections[4]}}</h1>
         <div class="infobox">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd9f8CF4u0PBccdH8Bt94GPUw4tMJ_8mrHiSf7u0g30gKBxkQ/viewform?embedded=true" width="760" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading RSVP...</iframe>
         </div>
     </div>
+-->
 </div>
