updated website with rsvp and other content

--- a/main.html
+++ b/main.html
@@ -46,15 +46,20 @@
 <div id="content">
     <div id="{{sectionIds[0]}}" class="wedding-heading container"> <!-- Details -->
         <h1>{{sections[0]}}</h1>
-        <p class="infobox">
-            Our wedding will be on <b>July 22, 2017</b>.
-            We will have a short ceremony at the <b>Walled Garden at Mellon Park</b> starting at <b>4:00pm</b>.
-            A reception at <b>The Union Project</b> will follow, beginning at <b>5:00pm</b>.
-        </p>
+        <div class="infobox">
+            <h3>The Weddding</h3>
+            <p>
+                Our wedding will be on <b>July 22, 2017</b>.
+                We will have a short ceremony at the <b>Walled Garden at Mellon Park</b> starting at <b>4:30pm</b>.
+                A reception at <b>The Union Project</b> will follow, from <b>5:15</b> to <b>10:30</b>.
+            </p>
+        </div>
 
         <div class="row">
             <div class="col-sm-6">
-                <img src="/images/walled-garden.jpg" class="event-img img-responsive img-rounded img-center" />
+                <a href="https://goo.gl/maps/6F7vs4qW14k" target="_blank">
+                    <img src="/images/walled-garden.jpg" class="event-img img-responsive img-rounded img-center" />
+                </a>
                 <div class="img-caption">
                     <div>Walled Garden @ Mellon Park </div>
                     <div>
@@ -67,7 +72,9 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <img src="/images/unionproject.jpg" class="event-img img-responsive img-rounded img-center" />
+                <a href="https://goo.gl/maps/YZn8dewsvMz" target="_blank">
+                    <img src="/images/unionproject.jpg" class="event-img img-responsive img-rounded img-center" />
+                </a>
                 <div class="img-caption">
                     <div>The Union Project</div>
                     <div>
@@ -81,15 +88,22 @@
             </div>
         </div>
 
-        <h2>(More)</h2>
+        <!--        <h2>(More)</h2>-->
         <div class="infobox">
+            <h3>Wedding Details</h3>
             <ul>
-                <li>The Walled Garden has a lot of grass, and Pittsburgh in July can be rainy, so those-in-heels may want to take notice.</li>
+                <li>Casual cocktail attire -- we understand it'll probably be warm in July so definitely wear something you'll be comfortable in.</li>
+                <li>The Walled Garden has a lot of grass, and summertime in Pittsburgh can be rainy, so those-in-heels may want to take notice.</li>
                 <li>If it's sunny or there's light rain, we'll keep the ceremony outside. If it's heavy rain, we will head to the Union Project for the ceremony and stay for the reception.</li>
-                <li>To get between the ceremony and reception, we're hoping Uber and locals who are willing to share their seats will be enough. The two spots are about 2 miles apart.</li>
-                <li>The ceremony and reception are definitely kid-friendly.</li>
+                <li>To get between the ceremony and reception, we're hoping Lyft and locals who are willing to share their seats will be enough. The two spots are about 2 miles apart.</li>
+                <li>The ceremony and reception are definitely kid-friendly, but unfortunately high chairs and booster seats will not be available.</li>
                 <li>We will have vegetarian and gluten-free food options.</li>
             </ul>
+
+            <h3>Sunday Brunch</h3>
+            <p>We'd love it if you can join us for a casual breakfast/brunch starting at <b>10am</b> on <b>July 23</b>. We plan on having bagels and other light breakfast foods. Our lovely friend Julia is hosting at <a href="https://goo.gl/maps/xiQHhuEyj9r" target="_blank">5502 Raleigh St, Pittsburgh, PA</a>. Parking is along Beacon or Murdoch, and it's along the 61 bus routes.</p>
+
+            <!--            <p>We'll be sharing a casual meal on <b>July 23</b> starting at <b>10am</b>. We're thinking bagels and other yummy breakfast-y things. Our lovely friend Julia is hosting at <a href="https://goo.gl/maps/xiQHhuEyj9r" target="_blank">5502 Raleigh St, Pittsburgh, PA</a>. Parking is along Beacon or Murdoch, and it's along the 61 bus routes. We'd love to see you there!</p>-->
         </div>
     </div>
     <div id="{{sectionIds[1]}}" class="wedding-heading container"> <!-- Travel -->
@@ -214,21 +228,22 @@
         </div>
     </div>
     <!-- Registry -->
-<!--
+
     <div id="{{sectionIds[3]}}" class="wedding-heading container"> 
         <h1>{{sections[3]}}</h1>
         <div class="infobox">
-            We're registered on Amazon. We'd also be plenty happy with cash. But really, we just want you to be there (aww).
+            Coming Soon!
         </div>
     </div>
--->
+
     <!-- RSVP -->
-<!--
     <div id="{{sectionIds[4]}}" class="wedding-heading container">
         <h1>{{sections[4]}}</h1>
         <div class="infobox">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd9f8CF4u0PBccdH8Bt94GPUw4tMJ_8mrHiSf7u0g30gKBxkQ/viewform?embedded=true" width="760" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading RSVP...</iframe>
+            <div style="text-align:center">
+                (If you don't see a survey below, click <a href="https://docs.google.com/forms/d/e/1FAIpQLSd9f8CF4u0PBccdH8Bt94GPUw4tMJ_8mrHiSf7u0g30gKBxkQ/viewform" target="_blank">here</a>)
+            </div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd9f8CF4u0PBccdH8Bt94GPUw4tMJ_8mrHiSf7u0g30gKBxkQ/viewform?embedded=true" width="760" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading RSVP...</iframe>
         </div>
     </div>
--->
 </div>
