udpated registry info

--- a/main.html
+++ b/main.html
@@ -232,7 +232,12 @@
     <div id="{{sectionIds[3]}}" class="wedding-heading container"> 
         <h1>{{sections[3]}}</h1>
         <div class="infobox">
-            Coming Soon!
+            <p>
+                We are very excited to share our wedding with all of you, and your company on our wedding day is all we really need. If you do want to give us something tangible, please know that we will be starting the next chapter of our lives in Switzerland so we won't be able to take many physical items with us. Instead, we've created a wedding registry on <a href="https://www.honeyfund.com/wedding/JennyAndRyan" target="_blank">Honeyfund</a> where you can help us to support our honeymoon and setting up shop in Switzerland. 
+            </p>
+            <p>
+                If you decide you would like to give us a gift we would really appreciate if you can mail us a check/cash (6608 Dalzell Pl #2, Pittsburgh PA 15217), bring a card to the wedding, or (for the techies) send it via <a href="http://venmo.com/ryanaustincarlson" target="_blank">Venmo</a> or <a href="http://wallet.google.com" target="_blank">Google Wallet</a> (ryan.austin.carlson@gmail.com). A quick note: if you do decide to write a check, plase make it out to one of us, but not both, because we don't yet have a joint bank account so we won't be able to easily deposit checks make out to both of us.
+            </p>
         </div>
     </div>
 
