fixed spelling errors

--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
     <div id="{{sectionIds[0]}}" class="wedding-heading container"> <!-- Details -->
         <h1>{{sections[0]}}</h1>
         <div class="infobox">
-            <h3>The Weddding</h3>
+            <h3>The Wedding</h3>
             <p>
                 Our wedding will be on <b>July 22, 2017</b>.
                 We will have a short ceremony at the <b>Walled Garden at Mellon Park</b> starting at <b>4:30pm</b>.
@@ -111,7 +111,7 @@
         <div class="infobox">
             If you're not local, don't worry!
             <h3>By Air</h3>
-            The <a href="" target="_blank">Pittsburgh "International" Airport</a> (yeah, we go to Canada. And maybe Paris?) is about twenty minutes outside the city. You can catch an Uber / Lyft / cab to the hotel. The 28X bus also stops at the aiport and drops off Downtown and in Oakland.
+            The <a href="" target="_blank">Pittsburgh "International" Airport</a> (yeah, we go to Canada. And maybe Paris?) is about twenty minutes outside the city. You can catch an Uber / Lyft / cab to the hotel. The 28X bus also stops at the airport and drops off Downtown and in Oakland.
             <h3>By Train</h3>
             Our <a href="" target="_blank">Amtrak station</a> is located downtown and connects to the Pennsylvanian line (Philadelphia, NYC) and the Capital Limited line (Chicago, DC). It's very relaxing.
             <h3>By Car</h3>
@@ -236,7 +236,7 @@
                 We are very excited to share our wedding with all of you, and your company on our wedding day is all we really need. If you do want to give us something tangible, please know that we will be starting the next chapter of our lives in Switzerland so we won't be able to take many physical items with us. Instead, we've created a wedding registry on <a href="https://www.honeyfund.com/wedding/JennyAndRyan" target="_blank">Honeyfund</a> where you can help us to support our honeymoon and setting up shop in Switzerland. 
             </p>
             <p>
-                If you decide you would like to give us a gift we would really appreciate if you can mail us a check/cash (6608 Dalzell Pl #2, Pittsburgh PA 15217), bring a card to the wedding, or (for the techies) send it via <a href="http://venmo.com/ryanaustincarlson" target="_blank">Venmo</a> or <a href="http://wallet.google.com" target="_blank">Google Wallet</a> (ryan.austin.carlson@gmail.com). A quick note: if you do decide to write a check, plase make it out to one of us, but not both, because we don't yet have a joint bank account so we won't be able to easily deposit checks make out to both of us.
+                If you decide you would like to give us a gift we would really appreciate if you can mail us a check/cash (6608 Dalzell Pl #2, Pittsburgh PA 15217), bring a card to the wedding, or (for the techies) send it via <a href="http://venmo.com/ryanaustincarlson" target="_blank">Venmo</a> or <a href="http://wallet.google.com" target="_blank">Google Wallet</a> (ryan.austin.carlson@gmail.com). A quick note: if you do decide to write a check, please make it out to one of us, but not both, because we don't yet have a joint bank account so we won't be able to easily deposit checks make out to both of us.
             </p>
         </div>
     </div>
