updated event with weather update

--- a/main.html
+++ b/main.html
@@ -22,6 +22,7 @@
 <div id="header-container">
     <h1 id="header-text">Jenny &amp; Ryan</h1>
     <div><i>Help us celebrate our wedding!</i></div>
+    <div><b>Note</b>: We have an update about weather in the <a href="#events" du-smooth-scroll>Events</a> section</div>
     <br/>
 
 </div>
@@ -48,6 +49,10 @@
         <h1>{{sections[0]}}</h1>
         <div class="infobox">
             <h3>The Wedding</h3>
+            <div style="border:1px solid gray;padding-top:10px;padding-left:10px;padding-right:10px;margin-bottom:5px;">
+                <p><b>UPDATES</b></p>
+                <p><b>- 7/21 @ 7:30am</b>: We're watching the weather forecast (to determine if the ceremony will be at the Walled Garden or at the Union Project) and we'll have another update around noon tomorrow.</p>
+            </div>
             <p>
                 Our wedding will be on <b>July 22, 2017</b>.
                 We will have a short ceremony at the <b>Walled Garden at Mellon Park</b> starting at <b>4:30pm</b>.
