--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <script src="/bower_components/angular-scroll/angular-scroll.min.js"></script>
         <script src="/bower_components/angular-masonry/angular-masonry.js"></script>
         <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-        <script src="/app.js"></script>
+        <script src="/app.js?v=20170722.1200"></script>
         <link rel="stylesheet" href="app.css">
     </head>
     <body id="top" data-spy="scroll" data-target=".navbar" data-offset="0">
