--- a/main.html
+++ b/main.html
@@ -51,6 +51,7 @@
             <h3>The Wedding</h3>
             <div style="border:1px solid gray;padding-top:10px;padding-left:10px;padding-right:10px;margin-bottom:5px;">
                 <p><b>UPDATES</b></p>
+                <p><b>- 7/22 @ 12pm</b>: No final decision yet. According to <a href="https://darksky.net/details/40.4535,-79.9168/2017-7-22/us12/en" target="_blank">DarkSky</a>, there's currently a &lt;50% chance of rain at 4:30 today, so we're optimstic we can have the ceremony outdoors. We'll keep you posted. Feel free to text or call Ryan at (260) 227-5761 if you have any questions!</p>
                 <p><b>- 7/21 @ 7:30am</b>: We're watching the weather forecast (to determine if the ceremony will be at the Walled Garden or at the Union Project) and we'll have another update around noon tomorrow.</p>
             </div>
             <p>
